# TREESAP

./: .gitignore  README.md
lidar/: .dockerignore  Dockerfile  README.md  docker-compose.yml  doxygen.conf  environment.yml  environment_build.yml  environment_history.yml  pipeline.ui  pipeline.ui.autosave  pyproject.toml  requirements.txt
lidar/docs/html/: README_8md.html  ____init_____8py.html  annotated.html  annotated_dup.js  classes.html  classlidar_1_1config_1_1CONSTANT-members.html  classlidar_1_1config_1_1CONSTANT.html  classlidar_1_1config_1_1LiDARIndexType.html  (+75 more)
lidar/lidar/: config.py  download.py  download_dataset.py  full_test_1000.geojson  full_test_100_100_1000.geojson  full_test_1200.geojson  full_test_1d_750.geojson  full_test_1d_850.geojson  full_test_5d_850.geojson  gui.py  pipeline.py  plotter.py  pre_processing.py  processing.py  qt_gui.py  segmentation.py  test.geojson  test_gui.py  test_map.geojson  test_tile.geojson
lidar/resource/: GUI.md  SEGMENTATION.md
lidar/tests/: .gitignore  map.geojson  sample_map.geojson  test_lidar.py  tile.geojson
orthophoto/: README.md  add_id.ipynb  colour_space-Copy1.ipynb  combine_geojson.ipynb  green_threshing-only.ipynb  orthophoto_to_geojson.py  plot_calculate_classify_ndvi.ipynb  plot_color_quantization_2014-v2.ipynb  plot_color_quantization_2014.ipynb  plot_ubc_orthophoto_2014_calculate_classify_ndvi.ipynb  plot_ubc_orthophoto_2014_threshold.ipynb  plot_ubc_orthophoto_2020_calculate_classify_ndvi-Copy1.ipynb  plot_ubc_orthophoto_2020_calculate_classify_ndvi.ipynb  plot_ubc_orthophoto_2020_custom_pixel_classification-Copy1.ipynb  polygon_query_internal.py  polygons.geojson  polygons_482E_5456N.geojson  polygons_with_area.geojson  pyproject.toml  requirements.txt  standard_deviation-Copy1.ipynb  stddev_green_threshing-2.ipynb  stddev_green_threshing-4.ipynb  stddev_green_threshing.ipynb
orthophoto/orthophoto/: apprach_1_test.ipynb
orthophoto/tests/: test_orthophoto.py
(+141 files in other folders)
