[tool.poetry]
name = "lidar"
version = "0.1.0"
description = ""
authors = ["Rainerino <albertyanyy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
laspy = "^1.7.0"
matplotlib = "^3.3.4"
utm = "^0.7.0"
plotly = "^4.14.3"
ipywidgets = "^7.6.3"
pandas = "^1.2.2"
alphashape = "^1.1.0"
descartes = "^1.1.0"
scipy = "^1.6.1"
chart-studio = "^1.1.0"
sklearn = "^0.0"
scikit-image = "^0.18.1"
alpha-shapes = "^0.0.1"
geojson = "^2.5.0"
wget = "^3.2"
jupytext = "^1.10.2"
requests = "^2.25.1"
doxypypy = "^0.8.8"
progress = "^1.5"
laszip = "^0.0.1"
tqdm = "^4.59.0"
PyQtWebEngine = "^5.15.4"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.9"
ipywidgets = "^7.6.3"
PyQt5 = "^5.15.3"
yapf = "^0.30.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
