[tool.poetry]
name = "orthophoto"
version = "0.1.0"
description = ""
authors = ["Rainerino <albertyanyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
jupyterlab = "^2.2.9"
Pillow = "^8.0.1"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
