[tool.poetry]
name = "orthophoto"
version = "0.1.0"
description = ""
authors = ["Rainerino <albertyanyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
jupyterlab = "^2.2.9"
Pillow = "^8.0.1"
matplotlib = "^3.3.3"
laspy = "^1.7.0"
PDAL = "^2.3.7"
utm = "^0.7.0"
pyqtgraph = "^0.11.1"
vispy = "^0.6.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipywidgets = "^7.6.3"
PyQt5 = "^5.15.3"
ipympl = "^0.6.3"
ipyvolume = "^0.5.2"
nodejs = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
